--- a/wordpress.yml
+++ b/wordpress.yml
@@ -16,18 +16,18 @@ services:
       WORDPRESS_DB_NAME: ${MYSQL_DATABASE_NAME}
     deploy:
       labels:
-        traefik.http.services.${WEBSITE_NAME}.loadbalancer.server.port: '80'
-        traefik.http.routers.${WEBSITE_NAME}-http.entrypoints: http
-        traefik.http.routers.${WEBSITE_NAME}-https.rule: Host(`${DOMAIN}`)
-        traefik.http.routers.${WEBSITE_NAME}-https.tls.certresolver: cloudflare
-        traefik.http.routers.${WEBSITE_NAME}-https.entrypoints: https
+        traefik.http.services.CHANGETHIS.loadbalancer.server.port: '80'
+        traefik.http.routers.CHANGETHIS-http.entrypoints: http
+        traefik.http.routers.CHANGETHIS-https.rule: Host(`${DOMAIN}`)
+        traefik.http.routers.CHANGETHIS-https.tls.certresolver: cloudflare
+        traefik.http.routers.CHANGETHIS-https.entrypoints: https
         traefik.constraint-label: traefik-public
-        traefik.http.routers.${WEBSITE_NAME}-http.middlewares: https-redirect
-        traefik.http.routers.${WEBSITE_NAME}-https.middlewares: google-oauth@file
-        traefik.http.routers.${WEBSITE_NAME}-https.tls: 'true'
+        traefik.http.routers.CHANGETHIS-http.middlewares: https-redirect
+        traefik.http.routers.CHANGETHIS-https.middlewares: google-oauth@file
+        traefik.http.routers.CHANGETHIS-https.tls: 'true'
         traefik.docker.network: traefik-public
         traefik.enable: 'true'
-        traefik.http.routers.${WEBSITE_NAME}-http.rule: Host(`${DOMAIN}`)
+        traefik.http.routers.CHANGETHIS-http.rule: Host(`${DOMAIN}`)
       replicas: 1
 networks:
   traefik-public:
