--- a/wordpress.yml
+++ b/wordpress.yml
@@ -10,7 +10,7 @@ services:
     logging:
       driver: json-file
     environment:
-      WORDPRESS_DB_HOST: 10.111.0.5:25060
+      WORDPRESS_DB_HOST: ${MYSQL_DATABASE_HOST}
       WORDPRESS_DB_USER: ${MYSQL_DATABASE_USERNAME}
       WORDPRESS_DB_PASSWORD: ${MYSQL_DATABASE_PASSWORD}
       WORDPRESS_DB_NAME: ${MYSQL_DATABASE_NAME}
